@@ -94,10 +94,12 @@ void cyg_user_start(void)
   
     CYG_TEST_PASS_FAIL((ret == FLASH_ERR_OK),"flash_init");
 
+#ifdef CYGSEM_IO_FLASH_LEGACY_DEVICE_API
+    //Strictly speaking, this is a device driver call, not a user API call.
     flash_dev_query(data);
     CYG_TEST_PASS_FAIL(!strncmp(data,"Linux Synthetic Flash",sizeof(data)),
                        "flash_query"); 
-
+#endif
     ret = flash_get_limits(NULL,&flash_start,&flash_end);
     CYG_TEST_PASS_FAIL((ret == FLASH_ERR_OK),"flash_get_limits");
 
